[tool.poetry]
name = "packtbi"
version = "1.0.0"
description = "Python utility to interract with BI"
authors = ["raajs <raajs@packt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
requests = "^2.28.1"
adal = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
